feat: add administrative boundaries and refine population map
